Sun Aug 15 18:14:20 2010  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_dump, BigDecimal_inspect,
	  VPrint, VpToString, VpVarCheck): use PRIuSIZE, PRIdSIZE, PRIdVALUE,
	  and PRIxVALUE.

Sun Aug 15 16:14:31 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/mkmf.rb (Logging.postpone): close @log only when it's available.

Sun Aug 15 13:30:35 2010  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.h (VpVtoD): fix a type of e.

	* ext/bigdecimal/bigdecimal.c (BigDecimal_dump, BigDecimal_inspect):
	  fix format for size_t.

Sun Aug 15 00:22:00 2010  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/extconf.rb, ext/bigdecimal/bigdecimal.h
	  (labs, llabs): support environments missing labs and llabs.

	* ext/bigdecimal/bigdecimal.h (vabs): added.

	* ext/bigdecimal/extconf.rb, ext/bigdecimal/bigdecimal.h,
	  ext/bigdecimal/bigdecimal.c, test/bigdecimal/test_bigdecimal.rb
	  (TestBigDecimal#test_new): replace U_LONG, S_LONG, S_INT, and U_INT
	  with appropriate standard or ruby-provided types.

Sun Aug 15 00:15:45 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_utime): Pathname#utime translated
	  from pathname.rb.

Sat Aug 14 21:04:28 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_gc_mark_threads): deprecated.

Sat Aug 14 19:12:10 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/{coverage,objspace}/extconf.rb ($INCFLAGS): explicitly add
	  topdir and top_srcdir.  [ruby-dev:42031]

Sat Aug 14 17:48:41 2010  Narihiro Nakamura  <authorNari@gmail.com>

	* test/objspace/test_objspace.rb: added test for objspace.

	* ext/objspace/objspace.c: considers T_ZOMBIE by lazy sweep GC.

	* gc.c: considers that dsize was 0. [ruby-dev:42022]

Sat Aug 14 15:33:02 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, include/ruby/defines.h (RUBY_FUNC_EXPORTED): macro
	  to declare exported function.

	* array.c (rb_ary_memsize), string.c (rb_str_memsize),